--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
   "name": "oven-cam-server",
-  "version": "1.0.0",
-  "description": "Node server running oven cam setup and video stream.",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "test.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/patrick-huber/oven-cam-server.git"
-  },
-  "author": "Patrick Huber",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/patrick-huber/oven-cam-server/issues"
-  },
-  "homepage": "https://github.com/patrick-huber/oven-cam-server#readme",
   "dependencies": {
-    "bleno": "^0.4.2",
-    "pi-wifi": "^1.2.0",
-    "util": "^0.10.3"
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "hbs": "~4.0.1",
+    "morgan": "~1.9.0",
+    "node-sass-middleware": "0.9.8",
+    "serve-favicon": "~2.4.5"
   }
 }
