--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
+    "raspicam": "^0.2.14",
     "serve-favicon": "~2.4.5"
   }
 }
