--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bleno": "^0.4.2",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "hbs": "~4.0.1",
+    "jsonfile": "^4.0.0",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
+    "pi-wifi": "^1.2.0",
     "raspicam": "^0.2.14",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "util": "^0.10.3"
   }
 }
