--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angularfire2": "^5.0.0-rc.4",
     "bleno": "^0.4.2",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "firebase": "^4.8.2",
     "hbs": "~4.0.1",
     "jsonfile": "^4.0.0",
     "morgan": "~1.9.0",
