--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^0.14.0",
     "angularfire2": "^5.0.0-rc.4",
     "bleno": "^0.4.2",
     "body-parser": "~1.18.2",
