--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "firebase": "^4.8.2",
+    "fs": "0.0.1-security",
     "hbs": "~4.0.1",
     "jsonfile": "^4.0.0",
     "morgan": "~1.9.0",
