--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
     "os": "^0.1.1",
-    "pi-wifi": "^1.2.0",
     "raspicam": "^0.2.14",
     "serve-favicon": "~2.4.5",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "wifi-control": "^2.0.1"
   }
 }
